verder met privacy

--- a/wbadjango/website/templates/privacy.html
+++ b/wbadjango/website/templates/privacy.html
@@ -71,23 +71,24 @@
             </li><li> Wettelijke verplichting : voor de doeleinden die gericht zijn op het verwerken van uw medische gegevens en het bijhouden van uw medisch dossier kunnen wij een wettelijke grondslag hebben. Daarnaast zijn wij wettelijk verplicht bepaalde gegevens te bewaren van de bestelling die u in onze webshop heeft geplaatst.
         </li></ul>
         <p><h5>Welke persoonsgegevens hebben wij nodig?</h5></p>
-            Door het gebruiken van de website en de daarop beschikbare diensten laat u bepaalde gegevens bij ons achter. Wij bewaren en gebruiken uitsluitend de persoonsgegevens die rechtstreeks door u worden opgegeven of waarvan bij opgave duidelijk is dat ze aan ons worden verstrekt om te verwerken. Afhankelijk van de dienst die u gebruikt kunnen wij de volgende gegevens via de website verzamelen:
-            
-            Uw contactgegevens (e-mailadres, telefoonnummer);
-            Uw naam, adres een woonplaats;
-            Uw geslacht en geboortedatum;
-            Accountgegevens;
-            Verzekeringsgegevens (naam verzekeraar, polisnummer, aanvangsdatum verzekering);
-            De naam van uw zorgverleners of apotheek;
-            Tijdstip van uw afspraak;
-            Betalingsgegevens en factuuradres;
-            Gegevens betreffende uw gezondheid;
-            Burgerservicenummer (BSN);
-            Klik- en bezoekgedrag;
-            Apparaatgegevens / (gepseudonimiseerd) IP-adres.
-            Gegevens van personen jonger dan 16 jaar
-            Onze website en/of dienst heeft niet de intentie gegevens te verzamelen over websitebezoekers die jonger zijn dan 16 jaar. We kunnen echter niet controleren of een bezoeker ouder dan 16 is. Wij raden ouders dan ook aan betrokken te zijn bij de online activiteiten van hun kinderen, om zo te voorkomen dat er gegevens over kinderen verzameld worden zonder ouderlijke toestemming. Als u ervan overtuigd bent dat wij zonder die toestemming persoonlijke gegevens hebben verzameld over een minderjarige, neem dan contact met ons op.
-            
+            <p>Door het gebruiken van de website en de daarop beschikbare diensten laat u bepaalde gegevens bij ons achter. Wij bewaren en gebruiken uitsluitend de persoonsgegevens die rechtstreeks door u worden opgegeven of waarvan bij opgave duidelijk is dat ze aan ons worden verstrekt om te verwerken. Afhankelijk van de dienst die u gebruikt kunnen wij de volgende gegevens via de website verzamelen:
+            </p>
+            <ul><li>Uw contactgegevens (e-mailadres, telefoonnummer);
+            </li><li>Uw naam, adres een woonplaats;
+            </li><li>Uw geslacht en geboortedatum;
+            </li><li>Accountgegevens;
+            </li><li>Verzekeringsgegevens (naam verzekeraar, polisnummer, aanvangsdatum verzekering);
+            </li><li>De naam van uw zorgverleners of apotheek;
+            </li><li>Tijdstip van uw afspraak;
+            </li><li>Betalingsgegevens en factuuradres;
+            </li><li>Gegevens betreffende uw gezondheid;
+            </li><li>Burgerservicenummer (BSN);
+            </li><li>Klik- en bezoekgedrag;
+            </li><li>Apparaatgegevens / (gepseudonimiseerd) IP-adres.
+            </li></ul>
+            <p>Gegevens van personen jonger dan 16 jaar</p>
+            <p>Onze website en/of dienst heeft niet de intentie gegevens te verzamelen over websitebezoekers die jonger zijn dan 16 jaar. We kunnen echter niet controleren of een bezoeker ouder dan 16 is. Wij raden ouders dan ook aan betrokken te zijn bij de online activiteiten van hun kinderen, om zo te voorkomen dat er gegevens over kinderen verzameld worden zonder ouderlijke toestemming. Als u ervan overtuigd bent dat wij zonder die toestemming persoonlijke gegevens hebben verzameld over een minderjarige, neem dan contact met ons op.
+            </p>
             Verstrekking aan derden
             Uw gegevens worden uitdrukkelijk niet aan derden verstrekt, anders dan derden die direct betrokken zijn bij de uitvoering van de overeenkomst tussen u en ons, of tenzij enige wettelijke bepaling ons hiertoe verplicht. De partijen die wij mogelijk nodig hebben voor de uitvoering van de door u aangevraagde diensten zijn:
             
