--- a/wbadjango/website/templates/privacy.html
+++ b/wbadjango/website/templates/privacy.html
@@ -89,24 +89,25 @@
             <p>Gegevens van personen jonger dan 16 jaar</p>
             <p>Onze website en/of dienst heeft niet de intentie gegevens te verzamelen over websitebezoekers die jonger zijn dan 16 jaar. We kunnen echter niet controleren of een bezoeker ouder dan 16 is. Wij raden ouders dan ook aan betrokken te zijn bij de online activiteiten van hun kinderen, om zo te voorkomen dat er gegevens over kinderen verzameld worden zonder ouderlijke toestemming. Als u ervan overtuigd bent dat wij zonder die toestemming persoonlijke gegevens hebben verzameld over een minderjarige, neem dan contact met ons op.
             </p>
-            Verstrekking aan derden
-            Uw gegevens worden uitdrukkelijk niet aan derden verstrekt, anders dan derden die direct betrokken zijn bij de uitvoering van de overeenkomst tussen u en ons, of tenzij enige wettelijke bepaling ons hiertoe verplicht. De partijen die wij mogelijk nodig hebben voor de uitvoering van de door u aangevraagde diensten zijn:
-            
-            Hostingpartijen en onze softwareleveranciers;
-            Betaaldienstverleners en bezorgdiensten;
-            Uw zorgverzekeraar.
-            Beveiliging
-            Wij nemen de bescherming van uw gegevens serieus en nemen passende maatregelen om misbruik, verlies, onbevoegde toegang, ongewenste openbaarmaking en ongeoorloofde wijziging tegen te gaan. Als u de indruk heeft dat uw gegevens niet goed beveiligd zijn of er aanwijzingen zijn van misbruik, neem dan contact op met ons.
-            
-            Bewaartermijn
-            Uw persoonsgegevens worden nimmer langer bewaard dan nodig is voor de in deze privacyverklaring of op de website omschreven doelen, behoudens de gevallen waarin enige wettelijke verplichting zich verzet tegen verwijdering van de persoonsgegevens.
-            
-            Websites van derden
-            Deze privacyverklaring is niet van toepassing op websites van derden die door middel van links met deze website zijn verbonden. Wij kunnen niet garanderen dat deze derden op een betrouwbare of veilige manier met uw persoonsgegevens omgaan. Daarom raden wij u aan de privacyverklaring van deze websites te lezen alvorens van deze websites gebruik te maken.
-            
-            Cookies
-            Wij maken op deze website gebruik van cookies. Een cookie is een klein tekstbestand dat bij het eerste bezoek aan deze website wordt opgeslagen in de browser van uw computer, tablet of smartphone. Deze zorgen ervoor dat de website naar behoren werkt en dat bijvoorbeeld uw voorkeursinstellingen onthouden worden. Deze cookies worden ook gebruikt om de website goed te laten werken en deze te kunnen optimaliseren. Bij uw eerste bezoek aan onze website hebben wij u al geïnformeerd over deze cookies en toestemming gevraagd voor het plaatsen ervan. U kunt zich afmelden voor cookies door uw internetbrowser zo in te stellen dat deze geen cookies meer opslaat. Daarnaast kunt u ook alle informatie die eerder is opgeslagen via de instellingen van uw browser verwijderen.
-            
+            <p>Verstrekking aan derden</p>
+            <p>Uw gegevens worden uitdrukkelijk niet aan derden verstrekt, anders dan derden die direct betrokken zijn bij de uitvoering van de overeenkomst tussen u en ons, of tenzij enige wettelijke bepaling ons hiertoe verplicht. De partijen die wij mogelijk nodig hebben voor de uitvoering van de door u aangevraagde diensten zijn:
+            </p><ul>
+            <li>>Hostingpartijen en onze softwareleveranciers;
+            </li><li>Betaaldienstverleners en bezorgdiensten;
+            </li><li>Uw zorgverzekeraar.
+            </li></ul>
+            <p>Beveiliging</p>
+            <p>Wij nemen de bescherming van uw gegevens serieus en nemen passende maatregelen om misbruik, verlies, onbevoegde toegang, ongewenste openbaarmaking en ongeoorloofde wijziging tegen te gaan. Als u de indruk heeft dat uw gegevens niet goed beveiligd zijn of er aanwijzingen zijn van misbruik, neem dan contact op met ons.
+            </p>
+            <p>Bewaartermijn</p>
+            <p>Uw persoonsgegevens worden nimmer langer bewaard dan nodig is voor de in deze privacyverklaring of op de website omschreven doelen, behoudens de gevallen waarin enige wettelijke verplichting zich verzet tegen verwijdering van de persoonsgegevens.
+            </p>
+            <p>Websites van derden</p>
+            <p>Deze privacyverklaring is niet van toepassing op websites van derden die door middel van links met deze website zijn verbonden. Wij kunnen niet garanderen dat deze derden op een betrouwbare of veilige manier met uw persoonsgegevens omgaan. Daarom raden wij u aan de privacyverklaring van deze websites te lezen alvorens van deze websites gebruik te maken.
+            </p>
+            <p>Cookies</p>
+            <p>Wij maken op deze website gebruik van cookies. Een cookie is een klein tekstbestand dat bij het eerste bezoek aan deze website wordt opgeslagen in de browser van uw computer, tablet of smartphone. Deze zorgen ervoor dat de website naar behoren werkt en dat bijvoorbeeld uw voorkeursinstellingen onthouden worden. Deze cookies worden ook gebruikt om de website goed te laten werken en deze te kunnen optimaliseren. Bij uw eerste bezoek aan onze website hebben wij u al geïnformeerd over deze cookies en toestemming gevraagd voor het plaatsen ervan. U kunt zich afmelden voor cookies door uw internetbrowser zo in te stellen dat deze geen cookies meer opslaat. Daarnaast kunt u ook alle informatie die eerder is opgeslagen via de instellingen van uw browser verwijderen.
+            </p>
             Gebruik van permanente cookies
             Met behulp van permanente cookies kunnen wij u herkennen bij een nieuw bezoek op onze website. De website kan daardoor speciaal op uw voorkeuren worden ingesteld. Ook wanneer u toestemming hebt gegeven voor het plaatsen van cookies kunnen wij dit door middel van een cookie onthouden. Hierdoor hoeft u niet steeds uw voorkeuren te herhalen waardoor u dus tijd bespaart en een prettiger gebruik van onze website kunt maken. Permanente cookies kunt u verwijderen via de instellingen van uw browser.
             
