derde herziening privacy

--- a/wbadjango/website/templates/dienstapo.html
+++ b/wbadjango/website/templates/dienstapo.html
@@ -32,10 +32,10 @@
         <div class="row">
           <div class="col-md-6 col-lg-8 mb-4 mb-lg-0">
             <div class="block-7">
-              <h3 class="footer-heading mb-4"><strong class="text-primary"></strong></h3>
+              <h4 class="footer-heading mb-4">Dienst Apotheek<strong class="text-primary"></strong></h4>
               <p><h4></h4><br><hr>
 
-                <h3 class="footer-heading mb-4">Dienst <strong class="text-primary">Apotheek</strong></h3>
+                <h5 class="footer-heading mb-4">Dienst <strong class="text-primary">Apotheek</strong></h5>
                 
                 <p>Voor spoedgevallen buiten de openingsuren kunt u naar de Wilhelmina apotheek.<br> ’s Avonds, ’s nachts en in het weekend bereikbaar.</p>
                 
