--- a/wbadjango/website/templates/privacy.html
+++ b/wbadjango/website/templates/privacy.html
@@ -86,63 +86,69 @@
             </li><li>Klik- en bezoekgedrag;
             </li><li>Apparaatgegevens / (gepseudonimiseerd) IP-adres.
             </li></ul>
-            <p>Gegevens van personen jonger dan 16 jaar</p>
+            <p><h5>Gegevens van personen jonger dan 16 jaar</h5></p>
             <p>Onze website en/of dienst heeft niet de intentie gegevens te verzamelen over websitebezoekers die jonger zijn dan 16 jaar. We kunnen echter niet controleren of een bezoeker ouder dan 16 is. Wij raden ouders dan ook aan betrokken te zijn bij de online activiteiten van hun kinderen, om zo te voorkomen dat er gegevens over kinderen verzameld worden zonder ouderlijke toestemming. Als u ervan overtuigd bent dat wij zonder die toestemming persoonlijke gegevens hebben verzameld over een minderjarige, neem dan contact met ons op.
             </p>
-            <p>Verstrekking aan derden</p>
+            <p><h5>Verstrekking aan derden</h5></p>
             <p>Uw gegevens worden uitdrukkelijk niet aan derden verstrekt, anders dan derden die direct betrokken zijn bij de uitvoering van de overeenkomst tussen u en ons, of tenzij enige wettelijke bepaling ons hiertoe verplicht. De partijen die wij mogelijk nodig hebben voor de uitvoering van de door u aangevraagde diensten zijn:
             </p><ul>
-            <li>>Hostingpartijen en onze softwareleveranciers;
+            <li>Hostingpartijen en onze softwareleveranciers;
             </li><li>Betaaldienstverleners en bezorgdiensten;
             </li><li>Uw zorgverzekeraar.
             </li></ul>
-            <p>Beveiliging</p>
+            <p><h5>Beveiliging</h5></p>
             <p>Wij nemen de bescherming van uw gegevens serieus en nemen passende maatregelen om misbruik, verlies, onbevoegde toegang, ongewenste openbaarmaking en ongeoorloofde wijziging tegen te gaan. Als u de indruk heeft dat uw gegevens niet goed beveiligd zijn of er aanwijzingen zijn van misbruik, neem dan contact op met ons.
             </p>
-            <p>Bewaartermijn</p>
+            <p><h5>Bewaartermijn</h5></p>
             <p>Uw persoonsgegevens worden nimmer langer bewaard dan nodig is voor de in deze privacyverklaring of op de website omschreven doelen, behoudens de gevallen waarin enige wettelijke verplichting zich verzet tegen verwijdering van de persoonsgegevens.
             </p>
-            <p>Websites van derden</p>
+            <p><h5>Websites van derden</h5></p>
             <p>Deze privacyverklaring is niet van toepassing op websites van derden die door middel van links met deze website zijn verbonden. Wij kunnen niet garanderen dat deze derden op een betrouwbare of veilige manier met uw persoonsgegevens omgaan. Daarom raden wij u aan de privacyverklaring van deze websites te lezen alvorens van deze websites gebruik te maken.
             </p>
-            <p>Cookies</p>
+            <p><h5>Cookies</h5></p>
             <p>Wij maken op deze website gebruik van cookies. Een cookie is een klein tekstbestand dat bij het eerste bezoek aan deze website wordt opgeslagen in de browser van uw computer, tablet of smartphone. Deze zorgen ervoor dat de website naar behoren werkt en dat bijvoorbeeld uw voorkeursinstellingen onthouden worden. Deze cookies worden ook gebruikt om de website goed te laten werken en deze te kunnen optimaliseren. Bij uw eerste bezoek aan onze website hebben wij u al geïnformeerd over deze cookies en toestemming gevraagd voor het plaatsen ervan. U kunt zich afmelden voor cookies door uw internetbrowser zo in te stellen dat deze geen cookies meer opslaat. Daarnaast kunt u ook alle informatie die eerder is opgeslagen via de instellingen van uw browser verwijderen.
             </p>
-            Gebruik van permanente cookies
+            <p><h5>Gebruik van permanente cookies</h5></p>
             Met behulp van permanente cookies kunnen wij u herkennen bij een nieuw bezoek op onze website. De website kan daardoor speciaal op uw voorkeuren worden ingesteld. Ook wanneer u toestemming hebt gegeven voor het plaatsen van cookies kunnen wij dit door middel van een cookie onthouden. Hierdoor hoeft u niet steeds uw voorkeuren te herhalen waardoor u dus tijd bespaart en een prettiger gebruik van onze website kunt maken. Permanente cookies kunt u verwijderen via de instellingen van uw browser.
             
-            Gebruik van sessie cookies
+            <p><h5>Gebruik van sessie cookies</h5></p>
             Met behulp van sessie cookies kunnen wij zien welke onderdelen van de website u met dit bezoek hebt bekeken. Wij kunnen onze dienst daardoor zoveel mogelijk aanpassen op het surfgedrag van onze bezoekers. Deze cookies worden automatisch verwijderd zodra u uw webbrowser afsluit.
             
-            Gebruik van analytische cookies
+            <p><h5>Gebruik van analytische cookies</h5></p>
             Wij houden statistieken bij op onze website, maar dit gebeurt te allen tijde geheel geanonimiseerd dan wel gepseudonimiseerd. Er worden geen statistieken bijgehouden op delen van de website waar uw gezondheidsgegevens uitgewisseld worden. Voor het bijhouden van statistieken kunnen wij gebruikmaken van onderstaande toepassingen.
             
-            Google Analytics
+            <p><h5>Google Analytics</h5></p>
             In de gevallen dat wij de tool Google Analytics hebben geactiveerd, worden via onze website cookies geplaatst van het Amerikaanse bedrijf Google, als deel van de Analytics dienst. Wij gebruiken deze dienst om bij te houden en rapportages te krijgen over hoe bezoekers de website gebruiken. Deze tool is privacyvriendelijk ingesteld. Zo hebben wij Google niet toegestaan de verkregen Analytics informatie te gebruiken voor andere Google-diensten, wij laten de IP-adressen pseudonimiseren en hebben een verwerkersovereenkomst met Google gesloten.
             De informatie die door Google wordt verzameld, wordt overgebracht naar en opgeslagen op servers in de Verenigde Staten. Google stelt zich te houden aan de Privacy Shield principles en is aangesloten bij het Privacy Shield-programma van het Amerikaanse Ministerie van Handel. Dit houdt in dat er sprake is van een passend beschermingsniveau voor de verwerking van eventuele persoonsgegevens.
             
-            Matomo Analytics (Piwik)
+            <p><h5>Matomo Analytics (Piwik)</h5></p>
             In het geval dat wij de tool van Matomo Analytics hebben geactiveerd, dan worden er (first party) cookies geplaatst om bezoekersstatistieken bij te houden. Het biedt ons de mogelijkheid om in kaart te brengen hoe bezoekers onze website gebruiken (hoelang je op een pagina blijft, van welke pagina je hier terecht bent gekomen en om het aantal unieke bezoekers te tellen). Alle gegevens blijven op onze server staan en worden nooit gedeeld met andere partijen.
             
-            Wijzigingen in deze privacy- en cookieverklaring
+            <p><h5>Wijzigingen in deze privacy- en cookieverklaring</h5></p>
             Wij behouden ons het recht voor om wijzigingen aan te brengen in deze verklaring. Het verdient aanbeveling om deze verklaring geregeld te raadplegen, zodat u van deze wijzigingen op de hoogte bent.
             
-            Inzage, wijzigen en verwijderen van uw gegevens
+            <p><h5>Inzage, wijzigen en verwijderen van uw gegevens</h5></p>
             U heeft het recht om uw persoonsgegevens in te zien, te corrigeren of te verwijderen. Daarnaast heeft u het recht om uw eventuele toestemming voor de gegevensverwerking in te trekken of bezwaar te maken tegen de verwerking van uw persoonsgegevens door Apotheek Westerbork en heeft u het recht op gegevensoverdraagbaarheid. Dat betekent dat u bij ons een verzoek kunt indienen om de persoonsgegevens die wij van u beschikken in een computerbestand naar u of een ander, door u genoemde organisatie, te sturen. U kunt een verzoek tot inzage, correctie, verwijdering, gegevensoverdraging van uw persoonsgegevens of verzoek tot intrekking van uw toestemming of bezwaar op de verwerking van uw persoonsgegevens sturen naar de onderstaande contactgegevens. We reageren zo snel mogelijk op uw verzoek. Zorg ervoor dat u duidelijk aangeeft wie u bent, zodat wij zeker weten dat we geen gegevens van de verkeerde persoon aanpassen of verwijderen.
             
-            Autoriteit Persoonsgegevens
+            <p><h5>Autoriteit Persoonsgegevens</h5></p>
             Apotheek Westerbork wil u er tevens op wijzen dat u de mogelijkheid heeft om een klacht in te dienen bij de toezichthouder in het land waar u bent gevestigd. In Nederland heet de toezichthouder de Autoriteit Persoonsgegevens.
             
-            Vragen en feedback
+            <p><h5>Vragen en feedback</h5></p>
             We controleren regelmatig of we aan dit privacybeleid voldoen. Als u vragen heeft over dit privacybeleid, kunt u contact met ons opnemen door middel van de onderstaande contactgegevens.
             
-            Contact
-            Apotheek Westerbork BV
-            Groeneweg 3
-            9431BJ Westerbork
+            <p><h5>Contact</h5></p>
+            <p>Apotheek Westerbork </p>
+           
             
-            E-mail:info@apotheekwesterbork.nl
-            Telefoon:0593 37 15 90
+            <div class="col-md-6 col-lg-3">
+              <div class="block-5 mb-5">
+                <h3 class="footer-heading mb-4"></h3>
+                <ul class="list-unstyled">
+                  <li class="address">Groeneweg 3 <br> 9431 BJ <br> Westerbork</li>
+                  <li class="phone"><a href="tel:+31593371590">0593 371590</a></li>
+                  <li class="email"><a href="mailto: info@apotheekwesterbork.nl">info@apotheekwesterbork.nl</a></li>
+                </ul>
+              </div>
             </div>
             </div>
 
