--- a/wbadjango/website/templates/contact.html
+++ b/wbadjango/website/templates/contact.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="title-section">
-            <h2>Email &<strong class="text-primary"> Telefoon</strong></h2>
+            <h2>E-mail &<strong class="text-primary"> Telefoon</strong></h2>
           </div>
 
           
