--- a/wbadjango/website/templates/home.html
+++ b/wbadjango/website/templates/home.html
@@ -87,9 +87,9 @@
           <div class="col-lg-4">
             <div class="feature">
               <span class="wrap-icon flaticon-medicine"></span>
-              <h3><a href="#">Medicijnconsult</a></h3>
+              <h3><a href="{% url 'inloop' %}">Medicijnconsult</a></h3>
               <p>Voor een persoonlijk medicijnconsult bent u welkom in onze apotheek. Wij hebben hiervoor een aparte spreekkamer om uw privacy volledig te kunnen garanderen. De aparte spreekkamer ingericht voor het bespreken van langere vragen, een uitgebreid medicijnconsult of delicate kwesties. U kunt hiervoor een afspraak maken met uw apotheek.</p>
-              <p><a href="#" class="d-flex align-items-center"><span class="mr-2">Meer informatie</span> <span class="icon-keyboard_arrow_right"></span></a></p>
+              <p><a href="{% url 'inloop' %}" class="d-flex align-items-center"><span class="mr-2">Meer informatie</span> <span class="icon-keyboard_arrow_right"></span></a></p>
             </div>
           </div>
           <div class="col-lg-4">
