--- a/wbadjango/website/templates/navbar.html
+++ b/wbadjango/website/templates/navbar.html
@@ -44,12 +44,12 @@
               <li class="has-children">
                 <a href="#">Informatie</a>
                 <ul class="dropdown">
-                  <li><a href="#">Medische klachten</a></li>
+                  
                  
                   <li><a href="https://www.apotheeknieuws.nl/">Nieuws</a></li>
                   <li><a href="#">Toestemming geven</a></li>
-                  <li><a href="#">Reisadvies</a></li>
-                  <li><a href="#">Links</a></li>
+                  <li><a href="https://lcr.nl/landen">Reisadvies</a></li>
+                  
                 </ul>
               </li>
               <li class="has-children">
@@ -60,10 +60,10 @@
                     <a href="#">Merkloos medicijn: goed en goedkoper</a>
                   
                   </li>
-                  <li><a href="#">Patiëntenfolders</a></li>
+                 
                   <li><a href="#">Begeleidingsgesprek bij een nieuw medicijn</a></li>
-                  <li><a href="#">Medicijnen in het verkeer</a></li>
-                  <li><a href="#">Geneesmiddelen mee op reis</a></li>
+                  <li><a href="https://www.rijveiligmetmedicijnen.nl/">Medicijnen in het verkeer</a></li>
+                  <li><a href="https://www.hetcak.nl/medicijnen-mee-op-reis/">Geneesmiddelen mee op reis</a></li>
                   <li><a href="#">Zorgverzekering en apotheek</a></li>
                 </ul>
               </li>
