--- a/wbadjango/website/templates/navbar.html
+++ b/wbadjango/website/templates/navbar.html
@@ -55,7 +55,7 @@
               <li class="has-children">
                 <a href="#">Meer</a>
                 <ul class="dropdown">
-                  <li><a href="#">Iemand anders machtigen</a></li>
+                  <li><a href="{% url 'iemandanders' %}">Iemand anders machtigen</a></li>
                   <li>
                     <a href="#">Merkloos medicijn: goed en goedkoper</a>
                   
