--- a/wbadjango/website/templates/navbar.html
+++ b/wbadjango/website/templates/navbar.html
@@ -47,7 +47,7 @@
                   
                  
                   <li><a href="https://www.apotheeknieuws.nl/">Nieuws</a></li>
-                  <li><a href="#">Toestemming geven</a></li>
+                  <li><a href="{% url 'toest' %}">Toestemming geven</a></li>
                   <li><a href="https://lcr.nl/landen">Reisadvies</a></li>
                   
                 </ul>
