--- a/wbadjango/website/templates/home.html
+++ b/wbadjango/website/templates/home.html
@@ -79,9 +79,9 @@
           <div class="col-lg-4">
             <div class="feature">
               <span class="wrap-icon flaticon-medicine"></span>
-              <h3><a href="{% url 'home' %}">Uw Apotheek in Westerbork</a></h3>
-              <p>Onze apotheek vindt het belangrijk dat de patiënt goed begeleid wordt. Met vragen kunt u op verschillende manieren bij ons terecht: via de website, telefonisch en via persoonlijk contact in de apotheek. Voor achtergrondinformatie over bijvoorbeeld medicijnen, de bijwerkingen, aandoeningen kunt u ook terecht op onze website.</p>
-              <p><a href="{% url 'onsteam' %}" class="d-flex align-items-center"><span class="mr-2">Meer informatie</span> <span class="icon-keyboard_arrow_right"></span></a></p>
+              <h3><a href="{% url 'onsteam' %}">Uw Apotheek in Westerbork</a></h3>
+              <p>Onze apotheek vindt het belangrijk dat de patiënt goed begeleid wordt. Met vragen kunt u op verschillende manieren bij ons terecht: via de e-mail, telefonisch en via persoonlijk contact in de apotheek. Voor achtergrondinformatie over bijvoorbeeld medicijnen, de bijwerkingen, aandoeningen kunt u ook terecht op onze website.</p>
+              <p><a href="https://www.apotheeknieuws.nl/" class="d-flex align-items-center"><span class="mr-2">Meer informatie</span> <span class="icon-keyboard_arrow_right"></span></a></p>
             </div>
           </div>
           <div class="col-lg-4">
