--- a/wbadjango/website/templates/navbar.html
+++ b/wbadjango/website/templates/navbar.html
@@ -55,16 +55,11 @@
               <li class="has-children">
                 <a href="#">Meer</a>
                 <ul class="dropdown">
-                  <li><a href="{% url 'iemandanders' %}">Iemand anders machtigen</a></li>
-                  <li>
-                    <a href="#">Merkloos medicijn: goed en goedkoper</a>
-                  
-                  </li>
-                 
-                  <li><a href="#">Begeleidingsgesprek bij een nieuw medicijn</a></li>
+                  <li><a href="{% url 'iemandanders' %}">Iemand anders machtigen</a></li> 
+                  <li><a href="{% url 'eu' %}">Begeleidingsgesprek bij een nieuw medicijn</a></li>
                   <li><a href="https://www.rijveiligmetmedicijnen.nl/">Medicijnen in het verkeer</a></li>
                   <li><a href="https://www.hetcak.nl/medicijnen-mee-op-reis/">Geneesmiddelen mee op reis</a></li>
-                  <li><a href="#">Zorgverzekering en apotheek</a></li>
+            
                 </ul>
               </li>
             </li>
