--- a/wbadjango/website/templates/onsteam.html
+++ b/wbadjango/website/templates/onsteam.html
@@ -36,8 +36,8 @@
         <p><h4>Ons Team </h4><br><hr>
 
           <p><h5 class="footer-heading mb-4">Wij staan voor u <strong class="text-primary">klaar!</strong></h5></p>
-          
-      1 apotheker - Dhr. drs. S. Chentasingh - BIG nummer: 29063823717<br>
+          Team<br>
+          1 apotheker - Dhr. drs. S. Chentasingh - BIG nummer: 29063823717<br>
           7 apothekersassistenten<br>
           1 bezorger<br>
         
@@ -50,7 +50,7 @@
           <p><h6 class="footer-heading mb-4"><strong class="text-primary">PERSOONLIJK EN VAKKUNDIGE SERVICE</strong></h6></p>
           <p>Uw apotheek kenmerkt zich door persoonlijk en vakkundige service en kan u voorzien in alle medicijnen. Daarnaast is een breed assortiment zelfzorg- en verzorgingsproducten verkrijgbaar.</p>
           <p><h6 class="footer-heading mb-4"><strong class="text-primary">SERVICE VAN UW APOTHEEK</strong></h6></p>
-          <p>Optimale medicatieveiligheid, uitgebreide bezorgservice, automatische herhaalservice en betrokken medewerkers. De service van uw apotheek gaat verder dan u gewend bent</p>
+          <p>Optimale medicatieveiligheid, afhaalautomaat buiten openingstijden, automatische herhaalservice en betrokken medewerkers. De service van uw apotheek gaat verder dan u gewend bent</p>
        
       </div>
       </div>
