--- a/wbadjango/website/templates/openingstijden.html
+++ b/wbadjango/website/templates/openingstijden.html
@@ -27,15 +27,12 @@
 
 </head>
 <body>
-    
-<div class="container">
-        <div class="row">
-          <div class="col-md-5 col-lg-8 mb-4 mb-lg-0">
-            <div class="block-7">
-              <h3 class="footer-heading mb-4"><strong class="text-primary"></strong></h3>
-              <p><h4>Openingstijden</h4><br><hr>
-                <div class="col-lg-8 mx-auto mb-5 mb-lg-0">
-                  <h5 class="footer-heading mb-4">Openingstijden</h5>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-8 mb-4 mb-lg-0">
+        <div class="block-7">
+          <h3 class="footer-heading mb-4"><strong class="text-primary"></strong></h3>
+          <p><h4>Openingstijden</h4><br><hr>
                   <table>
                     <tr>
                         <td class="day">Maandag</td>
@@ -59,7 +56,9 @@
                     </tr>
                    
                 </table>
-                
+                <br>
+                Op 24 december en op 31 december zijn wij om 16.00 uur gesloten.<br>
+                Op tweede paasdag, tweede pinksterdag, Hemelvaartsdag,  <br>25 december, 26 december en op 1 januari zijn wij gesloten.<br>
                 </div>
           
                 
@@ -67,8 +66,7 @@
             </div>
 <br>
 
-Op 24 december en op 31 december zijn wij om 16.00 uur gesloten.<br>
-Op tweede paasdag, tweede pinksterdag, Hemelvaartsdag,  25 december, 26 december en op 1 januari zijn wij gesloten.<br>
+
 <div>
 </div>
 
