--- a/wbadjango/website/templates/afhaalkluis.html
+++ b/wbadjango/website/templates/afhaalkluis.html
@@ -36,7 +36,7 @@
               <p><h4>Afhaalkluis</h4><br><hr>
                 <p>Het is met de afhaalkluis mogelijk om op onderstaande openingstijden snel en makkelijk bestelde medicijnen op te halen. Er wordt een code naar uw email-adres verstuurd. Met deze persoonlijke code is het mogelijk de bestelde medicatie uit de kluis te halen.
                 </p>
-                <p>U kunt zich aanmelden voor de afhaalkluis door ons een <a href="mailto: info@apotheekwesterbork.nl">e-mail</a> te sturen. Geef in het onderwerp aan dat u zich aanmeld voor onze afhaalkluis.
+                <p>U kunt zich aanmelden voor de afhaalkluis door ons een <a href="mailto: info@apotheekwesterbork.nl" class="link">e-mail<span>&#8594;</span></a> te sturen. Geef in het onderwerp aan dat u zich aanmeld voor onze afhaalkluis.
                 </p>
                 <p>Openingstijden afhaalkluis:</p>
             
