--- a/wbadjango/website/templates/contact.html
+++ b/wbadjango/website/templates/contact.html
@@ -50,12 +50,12 @@
           <div class="title-section">
             <h2>E-mail &<strong class="text-primary"> Telefoon</strong></h2>
           </div>
-
+        
           
             <div class="feature">
               <span class="wrap-icon flaticon-medicine"></span>
               <h3><a href="#">Uw Apotheek in Westerbork</a></h3>
-              <p>Heeft u een vraag over uw medicatie, de beschikbaarheid van geneesmiddelen, recepten/herhaalrecepten, diensten van de apotheek of wilt u zich inschrijven bij de apotheek?
+              <p>Heeft u een vraag over uw medicatie, de beschikbaarheid van geneesmiddelen, <br>recepten/herhaalrecepten, diensten van de apotheek of wilt u zich inschrijven bij de apotheek?<br>
                 Neem dan contact met ons op, wij helpen u graag verder: </p>
                 <div class="col-md-6 col-lg-3">
                   <div class="block-5 mb-5">
