--- a/wbadjango/website/templates/iemandanders.html
+++ b/wbadjango/website/templates/iemandanders.html
@@ -33,7 +33,7 @@
           <div class="col-md-6 col-lg-8 mb-4 mb-lg-0">
             <div class="block-7">
               <h3 class="footer-heading mb-4"><strong class="text-primary"></strong></h3>
-              <p><h4>Iemand adres machtigen</h4><br><hr>
+              <p><h4>Iemand anders machtigen</h4><br><hr>
 
         
 
@@ -41,7 +41,7 @@
                 </p><p>Hoe werkt het?</p>
                 <ol>
                <li>Bent u 18 jaar of ouder? Dan kunt u gebruik maken van de machtiging
-               </li><li>Download hier het <a href="{% static 'website/files/toestem.docx' %}"> machtigingsformulier</a>
+               </li><li>Download hier het <a href="{% static 'website/files/toestem.docx' %}" class="link"> machtigingsformulier<span>&#8594;</span></a>
                 </li><li>Vul dit formulier volledig in.
                 </li><li>Lever het formulier in bij Apotheek Westerbork.
                 </li><li>Als u als gemachtigde medicijnen of medicijngegevens gaat ophalen voor een ander? Neem dan altijd geldig legitimatiebewijs mee. Zonder geldig legitimatiebewijs kunnen wij de medicijnen of gegevens niet overhandigen.
