--- a/wbadjango/website/templates/klachten.html
+++ b/wbadjango/website/templates/klachten.html
@@ -41,7 +41,7 @@
                 
                 <p><h5>U heeft een klacht, wat nu?</h5></p>
                 
-                <p>Vervelend dat u een klacht heeft. Wij vinden het belangrijk van u te horen als u niet tevreden bent. Bespreek de klacht dan met een van onze medewerkers of met de apotheker. Wij nemen een klacht altijd serieus en gaan direct aan de slag om uw klacht samen met u op te lossen. Komen we er samen niet uit, dan kunt u hier lezen wat u vervolgens kunt doen.</p>
+                <p>Vervelend dat u een klacht heeft. Wij vinden het belangrijk van u te horen als u niet tevreden bent. Bespreek de klacht dan met een van onze medewerkers of met de apotheker. Wij nemen een klacht altijd serieus en gaan direct aan de slag om uw klacht samen met u op te lossen. Komen we er samen niet uit, dan kunt u <a href="https://www.apotheek.nl/zorg-van-de-apotheker/klachten-over-uw-apotheek" class="link">hier<span>&#8594;</span></a> lezen wat u vervolgens kunt doen.</p>
                 
                 <p><h5>Vragen of klachten over de rekening?</h5></p>
                 
