--- a/wbadjango/website/templates/adresenroute.html
+++ b/wbadjango/website/templates/adresenroute.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-8 mb-4 mb-lg-0">
           <div class="block-7">
-            <h3 class="footer-heading mb-4">Apotheek<strong class="text-primary">Westerbork</strong></h3>
+            <h3 class="footer-heading mb-4"><strong class="text-primary"></strong></h3>
             <p><h4>Adres en route</h4><br><hr>
 
              
