--- a/wbadjango/website/templates/dienstapo.html
+++ b/wbadjango/website/templates/dienstapo.html
@@ -50,7 +50,7 @@
                       9401 RK Assen  <br>
                       T: 0592-302324 <br>
                       F: 0592-325362 <br>
-                      Website: <a href= "https://www.wza.nl/pati%C3%ABnt/specialismen-en-afdelingen/wilhelmina-apotheek-4345">Klik hier</a> </p>
+                      Website: <a href= "https://www.wza.nl/pati%C3%ABnt/specialismen-en-afdelingen/wilhelmina-apotheek-4345" class="link">Klik hier<span>&#8594;</span></a> </p>
                       
                 
                   </div>
