--- a/wbadjango/website/templates/navbar.html
+++ b/wbadjango/website/templates/navbar.html
@@ -105,8 +105,8 @@
               <p>Wilhelmina apotheek
               Europaweg-Zuid 1 <br>
               9401 RK Assen  <br>
-              T: <a href="tel:+31592302324">0592-302324</a> <br>
-              Website: <a href= "https://www.wza.nl/pati%C3%ABnt/specialismen-en-afdelingen/wilhelmina-apotheek-4345">Klik hier</a> </p>
+              T: <a href="tel:+31592302324" class="link">0592-302324</a> <br>
+              Website: <a href= "https://www.wza.nl/pati%C3%ABnt/specialismen-en-afdelingen/wilhelmina-apotheek-4345" class="link">Klik hier<span>&#8594;</span></a> </p>
               
               Neem uw verzekeringspas en een geldig identiteitsbewijs mee.  <br> Betalen is alleen mogelijk per pin.</p>
           </div>
@@ -144,8 +144,8 @@
             <h3 class="footer-heading mb-4">Contact Info</h3>
             <ul class="list-unstyled">
               <li class="address">Groeneweg 3 <br> 9431 BJ <br> Westerbork</li>
-              <li class="phone"><a href="tel:+31593371590">0593 371590</a></li>
-              <li class="email"><a href="mailto: info@apotheekwesterbork.nl">info@apotheekwesterbork.nl</a></li>
+              <li class="phone"><a href="tel:+31593371590" class="link">0593 371590</a></li>
+              <li class="email"><a href="mailto: info@apotheekwesterbork.nl" class="link">info@apotheekwesterbork.nl</a></li>
             </ul>
           </div>
   
