--- a/wbadjango/website/templates/toest.html
+++ b/wbadjango/website/templates/toest.html
@@ -41,9 +41,9 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Ro78n39lp-c?si=SAsu9lhgkKSsyfMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <br><br><p>Wilt u dat zorgverleners uw medische gegevens elektronisch kunnen delen? Dan kunt u hiervoor mondeling toestemming geven als uw huisarts of apotheker daarom vraagt. Daarnaast kunt u het formulier uitprinten, invullen en inleveren bij uw zorgverlener. Ook kunt u uw toestemming online regelen op www.volgjezorg.nl. Het kan zijn dat meerdere zorgaanbieders gegevens over u hebben die ze willen delen. Geeft u dan bij elke zorgaanbieder uw toestemming. U kunt uw toestemming altijd weer intrekken.
                 </p>
-                <p><a href="{% static 'website/files/volgjezorg.pdf' %}">Bekijk de Voorlichtingsfolder Volgjezorg</a></p>
+                <p><a href="{% static 'website/files/volgjezorg.pdf' %}" class="link">Bekijk de Voorlichtingsfolder Volgjezorg<span>&#8594;</span></a></p>
 
-                <p>Het formulier downloaden en uitprinten? <a href="{% static 'website/files/toest.pdf' %}">Download het formulier.</a></p>
+                <p>Het formulier downloaden en uitprinten? <a href="{% static 'website/files/toest.pdf' %}" class="link">Download het formulier.<span>&#8594;</span></a></p>
             </div>
             </div>
             </div>
