--- a/wbadjango/website/templates/contact.html
+++ b/wbadjango/website/templates/contact.html
@@ -50,23 +50,29 @@
           <div class="title-section">
             <h2>E-mail &<strong class="text-primary"> Telefoon</strong></h2>
           </div>
-        
+      
           
             <div class="feature">
-              <span class="wrap-icon flaticon-medicine"></span>
+             <br>
               <h3><a href="#">Uw Apotheek in Westerbork</a></h3>
               <p>Heeft u een vraag over uw medicatie, de beschikbaarheid van geneesmiddelen, <br>recepten/herhaalrecepten, diensten van de apotheek of wilt u zich inschrijven bij de apotheek?<br>
                 Neem dan contact met ons op, wij helpen u graag verder: </p>
                 <div class="col-md-6 col-lg-3">
                   <div class="block-5 mb-5">
-                    <h3 class="footer-heading mb-4">Contact Info</h3>
+                    <h3 class="footer-heading mb-4"></h3>
                     <ul class="list-unstyled">
                      
                       <li class="phone"><a href="tel:+31593371590">0593 371590</a></li>
                       <li class="email"><a href="mailto: info@apotheekwesterbork.nl">info@apotheekwesterbork.nl</a></li>
                     </ul>
                   </div>
-              
+                  <div class="feature">
+                  
+                    <h3><a href="https://home.mijngezondheid.net/nl" >Contact via MijnGezondheid.net of de app MedGemak</a></h3>
+                    <p>Bent u klant van de apotheek, dan kunt u ook via ons beveiligd portaal MijnGezondheid.net of via de app MedGemak, een bericht naar de apotheek sturen.
+                    </p>
+                    <p><a href="https://home.mijngezondheid.net/nl" class="d-flex align-items-center"><span class="mr-2">Meer informatie</span> <span class="icon-keyboard_arrow_right"></span></a></p>
+                  </div>
            
                 </div>
               </div>
